# serde-intermediate

./: Cargo.toml  LICENSE  README.md  justfile
core/: Cargo.toml
core/benches/: benches.rs  types.rs
core/src/: error.rs  lib.rs  reflect.rs  schema.grammar.pest  schema.rs  tests.rs  versioning.rs
core/src/de/: intermediate.rs  mod.rs  object.rs  text.grammar.pest  text.rs
core/src/ser/: intermediate.rs  mod.rs  object.rs  text.rs
core/src/value/: intermediate.rs  mod.rs  object.rs
derive/: Cargo.toml
derive/src/: lib.rs  reflect.rs  schema.rs
reflect/: Cargo.toml
reflect-derive/: Cargo.toml
reflect-derive/src/: lib.rs
reflect/src/: lib.rs  tests.rs
tagged/: Cargo.toml
tagged/src/: lib.rs  tests.rs
