[package]
name = "serde-intermediate"
version = "1.6.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "Intermediate representation of Serde serialization"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/serde-intermediate"
repository = "https://github.com/PsichiX/serde-intermediate"
documentation = "https://docs.rs/serde-intermediate"
readme = "../README.md"

[features]
default = ["derive"]
derive = ["serde-intermediate-derive"]

[dependencies]
serde = { version = "1", features = ["derive"] }
petgraph = "0.6"
serde-intermediate-derive = { version = "1.6", path = "../derive", optional = true }
pest = "2.1"
pest_derive = "2.1"

[dev-dependencies]
serde_json = "1"
serde_yaml = "0.9"
ron = "0.8"
bincode = "1.3"
pot = "3"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "benches"
harness = false