[package]
name = "serde-tagged-intermediate"
version = "1.0.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
serde-intermediate = { version = "1", path = "../core" }

[dev-dependencies]
serde_json = "1"
